added a branch todo item

--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
-Fake TODO file for learning GIT.
-learn to make commits - done
-another line
+1. Learn to make commits (done)
+2. Learn about ignoring files (done)
+3. Learn about branches (done)
+
